5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1637_2711.log
== TEST (2019-04-11 11:04:10) 
-- CODE:
saldo = float(input("valor: "))
ru = float(input("quantos: "))
valru = float(input("valor: "))
pas = float(input("quantos: "))
valpas = float(input("valor: "))
if(saldo>=ru*valru+pas*valpas):
	print(SUFICIENTE)
else:
	print(INSULFICIENTE)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:04:55) 
-- CODE:
saldo = float(input("valor: "))
ru = float(input("quantos: "))
valru = float(input("valor: "))
pas = float(input("quantos: "))
valpas = float(input("valor: "))
if(saldo>=ru*valru+pas*valpas):
	print("SUFICIENTE")
else:
	print("INSULFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:05:43) 
-- CODE:
saldo = float(input("valor: "))
ru = float(input("quantos: "))
valru = float(input("valor: "))
pas = float(input("quantos: "))
valpas = float(input("valor: "))
if(saldo>=ru*valru+pas*valpas):
	print("SUFICIENTE")
else:
	print("INSULFICIENTE")

-- EXECUTION TIME:
0.229729
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:07:05) 
-- CODE:
saldo = float(input("valor: "))
ru = int(input("quantos: "))
valru = float(input("valor: "))
pas = int(input("quantos: "))
valpas = float(input("valor: "))
if(saldo>=ru*valru+pas*valpas):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")

-- EXECUTION TIME:
0.171008
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
